--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,35 @@
 {
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "nodemon": "^2.0.16",
     "sequelize": "^6.19.0"
   },
   "devDependencies": {
     "chai": "^4.3.6",
     "mocha": "^10.0.0"
-  }
+  },
+  "name": "server",
+  "version": "1.0.0",
+  "description": "Bibliotheque EFREI",
+  "main": "app.js",
+  "directories": {
+    "test": "tests"
+  },
+  "scripts": {
+    "test": "mocha",
+    "start": "nodemon --watch src --exec npm run server",
+    "dev": "npm run devinit && npm run start",
+    "devinit": "node ./tests/devinit/user.init.js",
+    "server": "node ./src/app.js"
+  },
+  "author": "QV Nguyen, Charles Lucas",
+  "license": "ISC"
 }
