--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "jwt-decode": "^3.1.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
