various small fixes

--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "start": "nodemon --watch src --exec npm run server",
     "dev": "npm run devinit && npm run start",
     "devinit": "node ./tests/devinit/user.init.js",
+    "devinitbook": "node ./tests/devinit/book.init.js",
     "server": "node ./src/app.js"
   },
   "author": "QV Nguyen, Charles Lucas",
