--- a/server/package.json
+++ b/server/package.json
@@ -26,9 +26,10 @@
   "scripts": {
     "test": "mocha",
     "start": "nodemon --watch src --exec npm run server",
-    "dev": "npm run devinit && npm run start",
-    "devinit": "node ./tests/devinit/user.init.js",
+    "dev": "npm run devinituser && npm run start",
+    "devinituser": "node ./tests/devinit/user.init.js",
     "devinitbook": "node ./tests/devinit/book.init.js",
+    "devinitcart": "node ./tests/devinit/cart.init.js",
     "server": "node ./src/app.js"
   },
   "author": "QV Nguyen, Charles Lucas",
